Виправлено баги IE

--- a/app/index.html
+++ b/app/index.html
@@ -327,6 +327,6 @@
     </footer>
     <script defer src="assets/js/jquery-3.2.1.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.6/js/swiper.min.js"></script>
-    <script defer src="assets/js/main.js"></script>
+    <script defer src="assets/js/main.min.js"></script>
   </body>
 </html>
